new icon: Lampa

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -362,7 +362,7 @@ lcl_essentiel_pro:
 
 lcl_ma_protection_maison:
   - fr.creditagricole.cats.maprotection.lcl/fr.creditagricole.cats.maprotection.ui.SplashActivity
- 
+
 lcl_masante:
   - lcl.com.application.lclmasante/lcl.com.application.lclmasante.SplashActivity
 
@@ -380,6 +380,5 @@ lcl_paiement_mobile:
 lcl_pro_entreprises:
   - fr.lcl.android.entreprise/fr.lcl.android.entreprise.ui.activities.AuthenticationActivity
 
- 
-
-
+lampa:
+  - ru.twicker.lampa/ru.twicker.lampa.ui.MainActivity
