new icon: PurpleTV

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -382,3 +382,6 @@ lcl_pro_entreprises:
 
 lampa:
   - ru.twicker.lampa/ru.twicker.lampa.ui.MainActivity
+
+purpletv:
+  - tv.orange/tv.twitch.android.app.core.LandingActivity
