new icon: AptekiPlus

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -385,3 +385,6 @@ lampa:
 
 purpletv:
   - tv.orange/tv.twitch.android.app.core.LandingActivity
+
+apteki_plus:
+  - ru.apteki.plus/ru.apteki.plus.MainActivity
