new icon: Notify for Amazfit

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -388,3 +388,7 @@ purpletv:
 
 apteki_plus:
   - ru.apteki.plus/ru.apteki.plus.MainActivity
+
+notify_for_amazfit:
+  - com.mc.amazfit1/com.mc.miband1.ui.MainActivityNight
+  - com.mc.amazfit1/com.mc.miband1.ui.MainActivity
