--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -398,3 +398,6 @@ notify_for_smartwatches:
   - com.mc.notify/com.mc.notify.ui.MainActivity
 
 notify_for_smartwatches_alt_1: {}
+
+acko:
+  - com.acko.android/com.acko.android.AckoActivity
