new icon: OkcAgent

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -401,3 +401,6 @@ notify_for_smartwatches_alt_1: {}
 
 acko:
   - com.acko.android/com.acko.android.AckoActivity
+
+okc_agent:
+  - org.ddosolitary.okcagent/org.ddosolitary.okcagent.MainActivity
