new icon: L'Equipe

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -404,3 +404,6 @@ acko:
 
 okc_agent:
   - org.ddosolitary.okcagent/org.ddosolitary.okcagent.MainActivity
+
+lequipe:
+  - lequipe.fr/lequipe.fr.newhome.MainActivity
