add missing ComponentInfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,24 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+dailyart:
+  - com.moiseum.dailyart2/eu.eastcodes.dailybase.views.main.SplashActivity
+
+quizlet:
+  - com.quizlet.quizletandroid/com.quizlet.quizletandroid.ui.RootActivity
+
+webtoon:
+  - com.nhn.android.webtoon/com.naver.webtoon.splash.SplashActivity
+
+nothing_recorder:
+  - com.nothing.soundrecorder/com.nothing.ui.NewMainActivity
+
+nextcloud_bookmarks:
+  - org.schabi.nxbookmarks/org.schabi.ocbookmarks.LoginAcitivty
+
+invizible_pro:
+  - pan.alexander.tordnscrypt/pan.alexander.tordnscrypt.MainActivity
+
+microsoft_surface_audio:
+  - com.microsoft.surfaceaudio/com.microsoft.surfaceaudio.MainActivity
