--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -29,3 +29,9 @@ invizible_pro:
 
 microsoft_surface_audio:
   - com.microsoft.surfaceaudio/com.microsoft.surfaceaudio.MainActivity
+
+udemy_business:
+ - com.udemy.android.ufb/com.udemy.android.B2BSplashActivity
+
+udemy_government:
+  - com.udemy.android.ufg/com.udemy.android.B2BSplashActivity
