new compinfo: Mattermost

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -35,3 +35,6 @@ udemy_business:
 
 udemy_government:
   - com.udemy.android.ufg/com.udemy.android.B2BSplashActivity
+
+mattermost:
+  - com.mattermost.rnbeta/com.mattermost.rnbeta.MainActivity
