new icon: Credicard

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -38,3 +38,6 @@ udemy_government:
 
 mattermost:
   - com.mattermost.rnbeta/com.mattermost.rnbeta.MainActivity
+
+credicard:
+  - com.credicard.app/br.com.itau.cartoes.presentation.splash.SplashActivity
