new icon: atome

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -41,3 +41,6 @@ mattermost:
 
 credicard:
   - com.credicard.app/br.com.itau.cartoes.presentation.splash.SplashActivity
+
+atome:
+  - ph.atome.paylater/com.atome.paylater.moudle.launcher.LaunchActivity
