new icon: Reword Japanese

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -44,3 +44,6 @@ credicard:
 
 atome:
   - ph.atome.paylater/com.atome.paylater.moudle.launcher.LaunchActivity
+
+reword_japanese:
+  - ru.poas.learn.japanese.jlpt.katakana.kana.hiragana.kanji.romaji/ru.poas.englishwords.splash.SplashActivity
