new icon: StreetMeasure

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -47,3 +47,6 @@ atome:
 
 reword_japanese:
   - ru.poas.learn.japanese.jlpt.katakana.kana.hiragana.kanji.romaji/ru.poas.englishwords.splash.SplashActivity
+
+streetmeasure:
+  - de.westnordost.streetmeasure/de.westnordost.streetmeasure.MeasureActivity
