new icon: Labyrinthos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -50,3 +50,6 @@ reword_japanese:
 
 streetmeasure:
   - de.westnordost.streetmeasure/de.westnordost.streetmeasure.MeasureActivity
+
+labyrinthos:
+  - com.labyrinthos.app/com.labyrinthos.app.MainActivity
