--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -53,3 +53,6 @@ streetmeasure:
 
 labyrinthos:
   - com.labyrinthos.app/com.labyrinthos.app.MainActivity
+
+find_my_kids:
+  - org.findmykids.app/org.findmykids.app.activityes.LauncherActivity
