new compinfo: UNIQLO

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -56,3 +56,6 @@ labyrinthos:
 
 find_my_kids:
   - org.findmykids.app/org.findmykids.app.activityes.LauncherActivity
+
+uniqlo:
+  - com.uniqlo.de2.catalogue/com.uniqlo.ja.catalogue.MainActivity
