new icon: Shyft

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -59,3 +59,6 @@ find_my_kids:
 
 uniqlo:
   - com.uniqlo.de2.catalogue/com.uniqlo.ja.catalogue.MainActivity
+
+shyft:
+  - com.coffeeenterprise/com.coffeeenterprise.registration.InitialActivity
