new icon: Alaska Airlines

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -62,3 +62,6 @@ uniqlo:
 
 shyft:
   - com.coffeeenterprise/com.coffeeenterprise.registration.InitialActivity
+
+alaska_airlines:
+  - com.alaskaairlines.android/com.alaskaairlines.android.activities.MainActivity
