Icon added for IPTV SMarters Pro

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -10,3 +10,7 @@
 #
 nebula_vpn:
   - net.defined.mobile_nebula/net.defined.mobile_nebula.MainActivity
+
+
+iptv_smarters_pro:
+  - com.nst.iptvsmarterstvbox/com.nst.iptvsmarterstvbox.view.activity.SplashActivity
