Icon added for PIA Games

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -14,3 +14,6 @@ nebula_vpn:
 
 iptv_smarters_pro:
   - com.nst.iptvsmarterstvbox/com.nst.iptvsmarterstvbox.view.activity.SplashActivity
+
+pia_games:
+  - com.piacredit.gen/com.piacredit.gen.SplashActivity
