Adding School Stream icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,6 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+school_stream:
+  - au.com.unlimitedfx.schoolstream/au.com.unlimitedfx.corestream.activities.HomeActivity
