Adding Spriggy icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -11,3 +11,6 @@
 
 school_stream:
   - au.com.unlimitedfx.schoolstream/au.com.unlimitedfx.corestream.activities.HomeActivity
+
+spriggy:
+  - au.com.spriggy.app/com.spriggy.MainActivity
