Adding Xbox Family icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -14,3 +14,6 @@ school_stream:
 
 spriggy:
   - au.com.spriggy.app/com.spriggy.MainActivity
+
+xbox_family:
+  - com.microsoft.xboxfamily/com.xboxfamily.MainActivity
