Add My NRMA icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -17,3 +17,6 @@ spriggy:
 
 xbox_family:
   - com.microsoft.xboxfamily/com.xboxfamily.MainActivity
+
+my_nrma:
+  - com.nrma/com.nrma.guide.SplashActivity
