Add Yomiwa icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -20,3 +20,6 @@ xbox_family:
 
 my_nrma:
   - com.nrma/com.nrma.guide.SplashActivity
+
+yomiwa:
+  - com.yomiwa.yomiwa/com.yomiwa.yomiwa.MainActivity
