new icon: PASMO

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -32,3 +32,5 @@ iptv_smarters_pro:
 pia_games:
   - com.piacredit.gen/com.piacredit.gen.SplashActivity
 
+pasmo:
+  - com.mobilepasmo.android/crc64d9ab44e01cb9fec3.SplashActivity
