new icon: c:geo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -34,3 +34,6 @@ pia_games:
 
 pasmo:
   - com.mobilepasmo.android/crc64d9ab44e01cb9fec3.SplashActivity
+
+cgeo:
+  - cgeo.geocaching/cgeo.geocaching.SplashActivity
