new icon: Waipu TV

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -37,3 +37,6 @@ pasmo:
 
 cgeo:
   - cgeo.geocaching/cgeo.geocaching.SplashActivity
+
+waipu_tv:
+  - de.exaring.waipu/de.exaring.waipu.ui.start.StartUpActivity
