new icon: Kaiser Permanente

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -40,3 +40,6 @@ cgeo:
 
 waipu_tv:
   - de.exaring.waipu/de.exaring.waipu.ui.start.StartUpActivity
+
+kaiser_permanente:
+  - org.kp.m/org.kp.m.splashscreen.view.SplashActivity
