new icon: MyTeletalk

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -43,3 +43,6 @@ waipu_tv:
 
 kaiser_permanente:
   - org.kp.m/org.kp.m.splashscreen.view.SplashActivity
+
+myteletalk:
+  - teletalk.teletalkcustomerapp/teletalk.teletalkcustomerapp.activity.SplashActivity
