new icon: dynamicSpot

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -46,3 +46,6 @@ kaiser_permanente:
 
 myteletalk:
   - teletalk.teletalkcustomerapp/teletalk.teletalkcustomerapp.activity.SplashActivity
+
+dynamicspot:
+  - com.jamworks.dynamicspot/com.jamworks.dynamicspot.SettingsHome
