--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -49,3 +49,6 @@ myteletalk:
 
 dynamicspot:
   - com.jamworks.dynamicspot/com.jamworks.dynamicspot.SettingsHome
+
+cdek:
+  - com.logistic.sdek/com.logistic.sdek.v2.modules.splash.ui.SplashV2Activity
