new icon: Chatruletka

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -52,3 +52,6 @@ dynamicspot:
 
 cdek:
   - com.logistic.sdek/com.logistic.sdek.v2.modules.splash.ui.SplashV2Activity
+
+chatruletka:
+  - com.chat.ruletka/com.chat.ruletka.SplashActivity
