add missing lines/icons

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -55,3 +55,15 @@ cdek:
 
 chatruletka:
   - com.chat.ruletka/com.chat.ruletka.SplashActivity
+
+kfc:
+  - com.yum.kfc/com.cognizantorderserv.kfcindiadroid.MainActivity
+
+starbucks:
+  - com.starbucks.in/com.tsb.app.home.presentation.view.activity.HomeActivity
+
+ticketmaster:
+  - com.ticketmaster.tickets.international/com.zoontek.rnbootsplash.RNBootSplashActivity
+
+aktion_mensch:
+  - de.aktionmensch.AMMobileAppDistribution/de.aktionmensch.app.activities.start.StartActivity
