new icon: EasyEquities

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -67,3 +67,6 @@ ticketmaster:
 
 aktion_mensch:
   - de.aktionmensch.AMMobileAppDistribution/de.aktionmensch.app.activities.start.StartActivity
+
+easyequities:
+  - za.co.easyequities.app/io.gonative.android.SplashActivity
