new icon: Nova ChatGPT Chatbot

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -70,3 +70,6 @@ aktion_mensch:
 
 easyequities:
   - za.co.easyequities.app/io.gonative.android.SplashActivity
+
+nova_chatbot:
+  - com.scaleup.chatai/com.scaleup.chatai.SplashActivity
