new icon: Skovik

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -73,3 +73,6 @@ easyequities:
 
 nova_chatbot:
   - com.scaleup.chatai/com.scaleup.chatai.SplashActivity
+
+skovik:
+  - com.skovik.mobile/com.skovik.mobile.MainActivity
