new icon: WhattaWatch

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -76,3 +76,6 @@ nova_chatbot:
 
 skovik:
   - com.skovik.mobile/com.skovik.mobile.MainActivity
+
+whattawatch:
+  - com.whattawatch/com.whattawatch.MainActivity
