--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -79,3 +79,36 @@ skovik:
 
 whattawatch:
   - com.whattawatch/com.whattawatch.MainActivity
+
+adobe_connect_classic:
+  - air.com.adobe.connectpro/air.com.adobe.connectpro.AppEntry
+
+blabber_im:
+  - im.blabber.messenger/de.pixart.messenger.ui.StartUI
+
+chowbus:
+  - com.chowbus.chowbus/com.chowbus.chowbus.activity.SplashActivity
+
+i2p:
+  - net.i2p.android.router/net.i2p.android.I2PActivity
+
+kernelsu:
+  - me.weishu.kernelsu/me.weishu.kernelsu.ui.MainActivity
+
+later:
+  - me.latergram.latergramme/me.latergram.latergramme.mvvm.account.ui.MainActivity
+
+nothing_weather:
+  - com.nothing.weather/com.nothing.weather.main.ui.MainActivity
+
+open_radio:
+  - com.yuriy.openradio/com.yuriy.openradio.mobile.view.activity.MainActivity
+
+sd_maid_se:
+  - eu.darken.sdmse/eu.darken.sdmse.main.ui.MainActivity
+
+themed_icons:
+  - rk.android.app.themedicons/rk.android.app.themedicons.activities.splash.LaunchActivity2
+
+samsung_wearable:
+  - com.samsung.android.app.watchmanager2/com.samsung.android.app.watchmanager.setupwizard.SetupWizardWelcomeActivity
