feat: add snipd icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -10,3 +10,6 @@
 #
 verifit:
     - com.whatever.verifit/com.example.verifit.ui.MainActivity
+
+snipd:
+    - ai.topicfinder.podcastdiscovery/ai.topicfinder.podcastdiscovery.MainActivity
