feat: add setedit icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -13,3 +13,6 @@ verifit:
 
 snipd:
     - ai.topicfinder.podcastdiscovery/ai.topicfinder.podcastdiscovery.MainActivity
+
+setedit:
+    - io.github.muntashirakon.setedit/io.github.muntashirakon.setedit.EditorActivity
