feat: add oneshot icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -16,3 +16,6 @@ snipd:
 
 setedit:
     - io.github.muntashirakon.setedit/io.github.muntashirakon.setedit.EditorActivity
+
+oneshot:
+    - de.ptrlx.oneshot/de.ptrlx.oneshot.feature_diary.presentation.diary.MainActivity
