feat(icons/moshidon): add nightly icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -19,3 +19,6 @@ setedit:
 
 oneshot:
     - de.ptrlx.oneshot/de.ptrlx.oneshot.feature_diary.presentation.diary.MainActivity
+
+moshidon_nightly:
+    - org.joinmastodon.android.moshinda.nightly/org.joinmastodon.android.MainActivity
