feat(icons/moshidon): add nightly alt icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -22,3 +22,5 @@ oneshot:
 
 moshidon_nightly:
     - org.joinmastodon.android.moshinda.nightly/org.joinmastodon.android.MainActivity
+
+moshidon_nightly_alt: {}
