feat(icons/moshidon): add debug icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -24,3 +24,6 @@ moshidon_nightly:
     - org.joinmastodon.android.moshinda.nightly/org.joinmastodon.android.MainActivity
 
 moshidon_nightly_alt: {}
+
+moshidon_debug:
+    - org.joinmastodon.android.moshinda.debug/org.joinmastodon.android.MainActivity
