feat: add lowleveldetector icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -27,3 +27,6 @@ moshidon_nightly_alt: {}
 
 moshidon_debug:
     - org.joinmastodon.android.moshinda.debug/org.joinmastodon.android.MainActivity
+
+lowleveldetector:
+    - net.imknown.android.forefrontinfo/net.imknown.android.forefrontinfo.ui.MainActivity
