feat: add simple alarm clock icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -30,3 +30,6 @@ moshidon_debug:
 
 lowleveldetector:
     - net.imknown.android.forefrontinfo/net.imknown.android.forefrontinfo.ui.MainActivity
+
+simple_alarm_clock:
+    - com.better.alarm/com.better.alarm.presenter.AlarmsListActivity
