--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -33,3 +33,12 @@ lowleveldetector:
 
 simple_alarm_clock:
     - com.better.alarm/com.better.alarm.presenter.AlarmsListActivity
+
+clock_you:
+  - com.bnyro.clock/com.bnyro.clock.ui.MainActivity
+
+tasky:
+  - com.thatsmanmeet.taskyapp/com.thatsmanmeet.taskyapp.MainActivity
+
+wifi_widget:
+  - com.w2sv.wifiwidget/com.w2sv.wifiwidget.ui.screens.home.HomeActivity
