rename moshidon nightly alt

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -23,7 +23,7 @@ oneshot:
 moshidon_nightly:
     - org.joinmastodon.android.moshinda.nightly/org.joinmastodon.android.MainActivity
 
-moshidon_nightly_alt: {}
+moshidon_nightly_alt_1: {}
 
 moshidon_debug:
     - org.joinmastodon.android.moshinda.debug/org.joinmastodon.android.MainActivity
