--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -66,3 +66,27 @@ atmosphere_lullaby:
 
 atmosphere_binaural_therapy:
   - com.peakpocketstudios.atmospherebinauraltherapy/com.peakpocketstudios.atmospherebinauraltherapy.activities.Splash
+
+amazon_workspaces:
+  - com.amazon.workspaces/crc64047a0d770568f918.MainActivity
+
+amazon_workspaces_alt_1: {}
+
+equate:
+  - com.llamacorp.equate/com.llamacorp.equate.view.CalcActivity
+
+freezeyou:
+  - cf.playhi.freezeyou/cf.playhi.freezeyou.ThirdIcon
+  - cf.playhi.freezeyou/cf.playhi.freezeyou.MainActivity
+
+hushed:
+  - com.hushed.release/com.hushed.base.landing.SplashActivity
+
+pagerduty:
+  - com.pagerduty.android/com.pagerduty.android.feature.main.view.ui.MainActivity
+
+sensi:
+  - com.asynchrony.emerson.sensi/com.emerson.sensi.splash.SplashActivity
+
+towaste:
+  - ca.toronto.torontowastewizard/ca.toronto.torontowastewizard.presentation.start.SplashActivity
