--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -90,3 +90,12 @@ sensi:
 
 towaste:
   - ca.toronto.torontowastewizard/ca.toronto.torontowastewizard.presentation.start.SplashActivity
+
+lukoil:
+  - ru.serebryakovas.lukoilmobileapp/ru.serebryakovas.lukoilmobileapp.activities.StartUpActivity
+
+sber_megamarket:
+  - ru.megamarket.marketplace/ru.goods.marketplace.SingleActivity
+
+ubrr:
+  - cb.ibank/cb.ibank.activities.StartupActivity
