--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,20 @@
 #
 # new_icon_2_alt_1: {}
 #
+discover_killer:
+  - com.kieronquinn.app.discoverkiller/com.kieronquinn.app.discoverkiller.ui.activities.MainActivity
+
+gallery_for_android:
+  - com.dot.gallery/com.dot.gallery.MainActivity
+
+musicmax:
+  - com.maximillianleonov.musicmax/com.maximillianleonov.musicmax.MusicmaxActivity
+  
+vendetta:
+  - dev.beefers.vendetta/com.discord.main.MainActivity
+
+vendetta_manager:
+  - dev.beefers.vendetta.manager/dev.beefers.vendetta.manager.ui.activity.MainActivity
+
+wiki_unblocked:
+  - org.greatfire.wikiunblocked.fdroid/org.wikipedia.main.MainActivity
