--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -16,7 +16,7 @@ gallery_for_android:
 
 musicmax:
   - com.maximillianleonov.musicmax/com.maximillianleonov.musicmax.MusicmaxActivity
-  
+
 vendetta:
   - dev.beefers.vendetta/com.discord.main.MainActivity
 
@@ -25,3 +25,66 @@ vendetta_manager:
 
 wiki_unblocked:
   - org.greatfire.wikiunblocked.fdroid/org.wikipedia.main.MainActivity
+
+simple_contacts_amber:
+  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Amber
+
+simple_contacts_blue:
+  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Blue
+
+simple_contacts_bluegrey:
+  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Blue_grey
+
+simple_contacts_brown:
+  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Brown
+
+simple_contacts_cyan:
+  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Cyan
+
+simple_contacts_deeporange:
+  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Deep_orange
+
+simple_contacts_deeppurple:
+  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Deep_purple
+
+simple_contacts_green:
+  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Green
+
+simple_contacts_greyblack:
+  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Grey_black
+
+simple_contacts_indigo:
+  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Indigo
+
+simple_contacts_lightblue:
+  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Light_blue
+
+simple_contacts_lightgreen:
+  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Light_green
+
+simple_contacts_lime:
+  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Lime
+
+simple_contacts_pink:
+  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Pink
+
+simple_contacts_purple:
+  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Purple
+
+simple_contacts_red:
+  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Red
+
+simple_contacts_teal:
+  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Teal
+  
+simple_contacts_yellow:
+  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Yellow
+
+simple_contacts:
+  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Orange
+
+retro_music_player:
+  - io.github.muntashirakon.Music/code.name.monkey.retromusic.activities.MainActivity
+
+openreads:
+  - software.mdev.bookstracker/software.mdev.bookstracker.MainActivity
