--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -27,61 +27,61 @@ wiki_unblocked:
   - org.greatfire.wikiunblocked.fdroid/org.wikipedia.main.MainActivity
 
 simple_contacts_amber:
-  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Amber
+  - de.ritscher.simplemobiletools.contacts.pro/com.simplemobiletools.contacts.pro.activities.SplashActivity.Amber
 
 simple_contacts_blue:
-  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Blue
+  - de.ritscher.simplemobiletools.contacts.pro/com.simplemobiletools.contacts.pro.activities.SplashActivity.Blue
 
 simple_contacts_bluegrey:
-  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Blue_grey
+  - de.ritscher.simplemobiletools.contacts.pro/com.simplemobiletools.contacts.pro.activities.SplashActivity.Blue_grey
 
 simple_contacts_brown:
-  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Brown
+  - de.ritscher.simplemobiletools.contacts.pro/com.simplemobiletools.contacts.pro.activities.SplashActivity.Brown
 
 simple_contacts_cyan:
-  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Cyan
+  - de.ritscher.simplemobiletools.contacts.pro/com.simplemobiletools.contacts.pro.activities.SplashActivity.Cyan
 
 simple_contacts_deeporange:
-  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Deep_orange
+  - de.ritscher.simplemobiletools.contacts.pro/com.simplemobiletools.contacts.pro.activities.SplashActivity.Deep_orange
 
 simple_contacts_deeppurple:
-  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Deep_purple
+  - de.ritscher.simplemobiletools.contacts.pro/com.simplemobiletools.contacts.pro.activities.SplashActivity.Deep_purple
 
 simple_contacts_green:
-  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Green
+  - de.ritscher.simplemobiletools.contacts.pro/com.simplemobiletools.contacts.pro.activities.SplashActivity.Green
 
 simple_contacts_greyblack:
-  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Grey_black
+  - de.ritscher.simplemobiletools.contacts.pro/com.simplemobiletools.contacts.pro.activities.SplashActivity.Grey_black
 
 simple_contacts_indigo:
-  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Indigo
+  - de.ritscher.simplemobiletools.contacts.pro/com.simplemobiletools.contacts.pro.activities.SplashActivity.Indigo
 
 simple_contacts_lightblue:
-  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Light_blue
+  - de.ritscher.simplemobiletools.contacts.pro/com.simplemobiletools.contacts.pro.activities.SplashActivity.Light_blue
 
 simple_contacts_lightgreen:
-  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Light_green
+  - de.ritscher.simplemobiletools.contacts.pro/com.simplemobiletools.contacts.pro.activities.SplashActivity.Light_green
 
 simple_contacts_lime:
-  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Lime
+  - de.ritscher.simplemobiletools.contacts.pro/com.simplemobiletools.contacts.pro.activities.SplashActivity.Lime
 
 simple_contacts_pink:
-  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Pink
+  - de.ritscher.simplemobiletools.contacts.pro/com.simplemobiletools.contacts.pro.activities.SplashActivity.Pink
 
 simple_contacts_purple:
-  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Purple
+  - de.ritscher.simplemobiletools.contacts.pro/com.simplemobiletools.contacts.pro.activities.SplashActivity.Purple
 
 simple_contacts_red:
-  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Red
+  - de.ritscher.simplemobiletools.contacts.pro/com.simplemobiletools.contacts.pro.activities.SplashActivity.Red
 
 simple_contacts_teal:
-  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Teal
-  
+  - de.ritscher.simplemobiletools.contacts.pro/com.simplemobiletools.contacts.pro.activities.SplashActivity.Teal
+
 simple_contacts_yellow:
-  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Yellow
+  - de.ritscher.simplemobiletools.contacts.pro/com.simplemobiletools.contacts.pro.activities.SplashActivity.Yellow
 
 simple_contacts:
-  - com.simplemobiletools.contacts/com.simplemobiletools.contacts.activities.SplashActivity.Orange
+  - de.ritscher.simplemobiletools.contacts.pro/com.simplemobiletools.contacts.pro.activities.SplashActivity.Orange
 
 retro_music_player:
   - io.github.muntashirakon.Music/code.name.monkey.retromusic.activities.MainActivity
