--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,11 +8,15 @@
 #
 # new_icon_2_alt_1: {}
 #
-discover_killer:
-  - com.kieronquinn.app.discoverkiller/com.kieronquinn.app.discoverkiller.ui.activities.MainActivity
+
+bartbonte_orange:
+  - air.com.bartbonte.orange/air.com.bartbonte.orange.AIRAppEntry
 
 camera:
   - com.shamim.cam/com.android.camera.CameraLauncher
+
+discover_killer:
+  - com.kieronquinn.app.discoverkiller/com.kieronquinn.app.discoverkiller.ui.activities.MainActivity
 
 favo:
   - app.flow.favo/com.unity3d.player.UnityPlayerActivity
