--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -97,3 +97,30 @@ retro_music_player:
 
 openreads:
   - software.mdev.bookstracker/software.mdev.bookstracker.MainActivity
+
+reaction_training:
+  - com.nixgames.reaction/com.nixgames.reaction.ui.splash.SplashActivity
+
+gg:
+  - io.ggapp.gg/io.ggapp.gg.MainActivity
+
+koleo:
+  - pl.koleo/pl.astarium.koleo.ui.startscreen.StartScreenActivity
+
+buckwheat:
+  - com.danilkinkin.buckwheat/com.danilkinkin.buckwheat.MainActivity
+
+animal_vision_simulator:
+  - app.bhupesh.armorking.animalvision/app.bhupesh.armorking.animalvision.MainActivity
+
+packageradar:
+  - ru.gdeposylka.delta/ru.gdeposylka.delta.ui.tracklist.TracklistActivity
+
+ent:
+  - com.ent.mobile/com.ent.mobile.MainActivity
+
+grid_diary:
+  - io.sumi.griddiary2/io.sumi.griddiary.activity.LaunchActivity
+
+camo:
+  - com.reincubate.camo/com.reincubate.camo.connection.ui.ConnectionUi
