--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,32 @@
 #
 # new_icon_2_alt_1: {}
 #
+fcitx5_for_android:
+  - org.fcitx.fcitx5.android/org.fcitx.fcitx5.android.ui.main.MainActivity
+
+inbank_notify:
+  - it.phoenixspa.notify/it.phoenixspa.notify.MainActivity
+
+magisk_delta:
+  - io.github.huskydg.magisk/com.topjohnwu.magisk.ui.MainActivity
+
+mediaset_infinity:
+  - it.fabbricadigitale.android.videomediaset/com.mediaset.mediasetplay.ui.main.MainActivity
+
+monochromatic:
+  - uk.co.richyhbm.monochromatic/uk.co.richyhbm.monochromatic.Activities.MainActivity
+
+photoprism_gallery:
+  - ua.com.radiokot.photoprism/ua.com.radiokot.photoprism.features.gallery.view.GalleryActivity
+
+proton_pass:
+  - proton.android.pass/proton.android.pass.ui.MainActivity
+
+ripple:
+  - info.guardianproject.ripple/info.guardianproject.ripple.MainActivity
+
+sms_forward:
+  - com.pierreduchemin.smsforward/com.pierreduchemin.smsforward.ui.MainActivity
+
+teapod:
+  - org.mosad.teapod/org.mosad.teapod.ui.activity.main.MainActivity
