--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -37,3 +37,16 @@ sms_forward:
 
 teapod:
   - org.mosad.teapod/org.mosad.teapod.ui.activity.main.MainActivity
+
+deezer:
+  - deezer.android.app.nobilling/com.deezer.android.ui.activity.LauncherActivity
+
+xvideos:
+  - com.xvideos.zsq.app/com.xvideos.zsq.app.rg_QiDongLei
+
+clock_you:
+  - com.bnyro.clock/com.bnyro.clock.ui.MainActivity
+
+whatsapp:
+  - com.qltech.whatsweb/com.qltech.whatsweb.0
+  - com.tqwhatsapp/com.tqwhatsapp.0
