--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,26 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+anilib_alt_1: {}
+
+german_dictionary:
+   - de.verbformen.app/de.verbformen.app.MainActivity
+   
+my_we:
+   - com.ucare.we/com.ucare.we.SplashActivity
+   
+prayer_times:
+   - com.reworewo.prayertimes/com.angga.ahisab.main.MainActivity
+
+proton_pass:
+   - proton.android.pass/proton.android.pass.ui.MainActivity
+   
+quad9_connect:
+   - com.quad9.aegis/com.quad9.aegis.MainActivity
+   
+quadline:
+   - com.IvanKovalov.quadline.android/com.unity3d.player.UnityPlayerActivity
+   
+status_sticker_saver:
+   - com.lazygeniouz.saveit/com.lazygeniouz.saveit.ui.activities.main.SplashCompatActivity
