--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -50,3 +50,13 @@ clock_you:
 whatsapp:
   - com.qltech.whatsweb/com.qltech.whatsweb.0
   - com.tqwhatsapp/com.tqwhatsapp.0
+
+tapet:
+  - com.sharpregion.tapet/com.sharpregion.tapet.MainActivity
+  - com.sharpregion.tapet/com.sharpregion.tapet.root.RootActivity
+
+down_dog_meditation:
+  - com.downdogapp.meditation/com.downdogapp.AppActivity
+
+down_dog_workout:
+  - com.downdogapp.hiit/com.downdogapp.AppActivity
