new 4 icons, 1 missing compinfo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -60,3 +60,18 @@ down_dog_meditation:
 
 down_dog_workout:
   - com.downdogapp.hiit/com.downdogapp.AppActivity
+
+elevate:
+  - com.wonder/com.pegasus.feature.main.MainActivity
+
+upstox:
+  - in.upstox.app/in.upstox.pro.beta.app.UpstoxMainActivity
+
+da_fit:
+  - com.crrepa.band.dafit/com.crrepa.band.my.view.activity.SplashActivity
+
+samsung_secure_wifi:
+  - com.samsung.android.fast/com.samsung.android.fast.DefaultActivity
+
+google_pixel_watch:
+  - com.google.android.apps.wear.companion/com.google.android.apps.wear.companion.application.RootActivity
