--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -75,3 +75,9 @@ samsung_secure_wifi:
 
 google_pixel_watch:
   - com.google.android.apps.wear.companion/com.google.android.apps.wear.companion.application.RootActivity
+
+chetak:
+  - com.bajajmychetak/com.zoontek.rnbootsplash.RNBootSplashActivity
+  
+carinfo:
+  - com.cuvora.carinfo/com.cuvora.carinfo.splash.SplashScreenActivity
