--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -81,3 +81,6 @@ chetak:
   
 carinfo:
   - com.cuvora.carinfo/com.cuvora.carinfo.splash.SplashScreenActivity
+
+basic_call_recorder:
+  - com.chiller3.bcr/com.chiller3.bcr.SettingsActivity
