Adding CMC Markets icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -164,3 +164,6 @@ voloco:
    
 pluot:
    - app.cordes.pluot/app.cordes.pluot.home.LaunchActivity
+
+cmc_markets:
+   - com.cmcmarkets.android.cfd/com.cmcmarkets.android.activities.InitialLoadingFragmentActivity
