Adding Trip.com icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -167,3 +167,6 @@ pluot:
 
 cmc_markets:
    - com.cmcmarkets.android.cfd/com.cmcmarkets.android.activities.InitialLoadingFragmentActivity
+
+tripcom: 
+   - ctrip.english/com.ctrip.ibu.myctrip.main.module.home.IBUHomeActivity
