Adding Paystay icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -170,3 +170,6 @@ cmc_markets:
 
 tripcom: 
    - ctrip.english/com.ctrip.ibu.myctrip.main.module.home.IBUHomeActivity
+
+paystay:
+   - au.com.paystay/au.com.paystay.LauncherActivity
