Adding SBS News

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -173,3 +173,6 @@ tripcom:
 
 paystay:
    - au.com.paystay/au.com.paystay.LauncherActivity
+
+sbs_news:
+   - com.sbs.worldnewsaustralia/au.com.sbs.mobilex.news.modules.splash.SplashActivity
