--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -176,3 +176,6 @@ paystay:
 
 sbs_news:
    - com.sbs.worldnewsaustralia/au.com.sbs.mobilex.news.modules.splash.SplashActivity
+
+dropsync:
+   - com.ttxapps.dropsync/com.ttxapps.sync.app.MainActivity
