--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -164,3 +164,20 @@ voloco:
    
 pluot:
    - app.cordes.pluot/app.cordes.pluot.home.LaunchActivity
+   
+google_authenticator_alt: {}
+
+_2b:
+   - com.twoebgypt.android/com.twobe.twobe.activites.SplashScreenActivity
+   
+carrefour_maf:
+   - com.aswat.carrefouruae/com.aswat.carrefouruae.feature.splash.view.activity.SplashActivity
+   
+talabat:
+   - com.talabat/com.talabat.LandingScreen
+   
+wasla:
+   - io.botler.wasla/io.botler.MainActivity
+   
+sarhne:
+   - app.sarhne.com/app.sarhne.com.Start
