feat(icons): add 2fas auth icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -164,3 +164,6 @@ voloco:
    
 pluot:
    - app.cordes.pluot/app.cordes.pluot.home.LaunchActivity
+
+_2fas:
+   - com.twofasapp/com.twofasapp.ui.main.StartActivity
