feat(icons): add linkbox icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -167,3 +167,6 @@ pluot:
 
 _2fas:
    - com.twofasapp/com.twofasapp.ui.main.StartActivity
+
+linkbox:
+   - me.loyko.ronald.linkbox/me.loyko.ronald.linkbox.MainActivity
