feat(icons): add presently icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -170,3 +170,6 @@ _2fas:
 
 linkbox:
    - me.loyko.ronald.linkbox/me.loyko.ronald.linkbox.MainActivity
+
+presently:
+   - journal.gratitude.com.gratitudejournal/journal.gratitude.com.gratitudejournal.ContainerActivity
