feat(icons/unitto): update icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -173,3 +173,6 @@ linkbox:
 
 presently:
    - journal.gratitude.com.gratitudejournal/journal.gratitude.com.gratitudejournal.ContainerActivity
+
+unitto:
+   - com.sadellie.unitto/com.sadellie.unitto.MainActivity
