feat(icons): add ytdlnis icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -176,3 +176,6 @@ presently:
 
 unitto:
    - com.sadellie.unitto/com.sadellie.unitto.MainActivity
+
+ytdlnis:
+   - com.deniscerri.ytdl/com.deniscerri.ytdlnis.MainActivity
