feat(icons): add stack icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -179,3 +179,6 @@ unitto:
 
 ytdlnis:
    - com.deniscerri.ytdl/com.deniscerri.ytdlnis.MainActivity
+
+stack:
+   - me.tylerbwong.stack/me.tylerbwong.stack.ui.MainActivity
