--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -164,3 +164,72 @@ voloco:
    
 pluot:
    - app.cordes.pluot/app.cordes.pluot.home.LaunchActivity
+   
+1gallery:
+   - app.galleryx/app.galleryx.activity.MainActivity
+   
+awesome_devil:
+   - studio.gameberry.Crow/com.google.firebase.MessagingUnityPlayerActivity
+   
+bitrix24:
+   - com.bitrix24.android/com.bitrix24.android.BX24Activity
+   
+chirp_access:
+   - com.chirp.access/com.chirp.access.MainActivity
+   
+dice_fm:
+   - fm.dice/fm.dice.splash.presentation.views.SplashActivity
+   
+dji_mimo:
+   - dji.mimo/dji.mimo.main.DJISplashActivity
+   
+dsub:
+   - github.daneren2005.dsub/github.daneren2005.dsub.activity.SubsonicFragmentActivity
+   
+gameloft_classics:
+   - com.gameloft.android.ANMP.GloftGLCL/com.gameloft.android.ANMP.GloftGLCL.Start
+   
+inkblot:
+   - com.inkblotapp.android/com.inkblotapp.android.MainActivity
+   
+legend_of_slime:
+   - com.loadcomplete.slimeidle/com.loadcomplete.UnityPlayerActivityExtension
+   
+my_nintendo:
+   - com.nintendo.znej/jp.co.nintendo.entry.ui.bootsequence.BootActivity
+   
+noisefit_prime:
+   - com.noisefit.prime/com.yc.pedometer.SplashActivity
+   
+nothing_system_service:
+   - com.nothing.appservice/com.nothing.appservice.MainActivity
+   
+promobit:
+   - br.com.promobit.app/br.com.promobit.app.ui.splash.SplashScreenActivity
+   
+race_the_sun:
+   - com.flippfly.racethesun/com.google.firebase.MessagingUnityPlayerActivity
+   
+samsung_deco_pic:
+   - com.samsung.android.livestickers/com.samsung.android.livestickers.camera.ShortcutActivity
+   
+shortform:
+   - com.shortform.app/com.shortform.app.MainActivity
+   
+sketchar:
+   - ktech.sketchar/ktech.sketchar.ZeroActivity
+   
+skiley:
+   - net.skiley.mobile/net.skiley.skiley_mobile.MainActivity
+   
+steezy:
+   - co.steezy.app/co.steezy.app.activity.main.StartupActivity
+   
+wavy_wallpapers:
+   - wavy.walls.droidbeauty.pack/wavy.walls.droidbeauty.pack.MainActivity
+   
+xenowerk:
+   - com.pixelbite.mutant/com.pixelbite.bite.BiteSplashScreen
+   
+yoodo:
+   - com.celcom.yoodo/com.zoontek.rnbootsplash.RNBootSplashActivity
